Updated example hosts file to be explicit about pulling passwords,keys from env vars.

--- a/Ansible/examples/host_vars/rt-ha/hosts.yml
+++ b/Ansible/examples/host_vars/rt-ha/hosts.yml
@@ -2,14 +2,14 @@
 all:
     vars:
         ansible_user: "ubuntu"
-        ansible_ssh_private_key_file: "/Users/jefff/.ssh/ansible-priv.pem"
+        ansible_ssh_private_key_file: "{{ lookup('env', 'ansible_key') }}"
     children:
         database:
             hosts:
                 #artifactory database
                 52.86.32.79:
                     db_users:
-                        - { db_user: "artifactory", db_password: "Art1fAct0ry" }
+                        - { db_user: "artifactory", db_password: "{{ lookup('env', 'artifactory_password') }}" }
                     dbs:
                         - { db_name: "artifactory", db_owner: "artifactory" }
         artifactory:
@@ -23,7 +23,7 @@ all:
                 db_driver: "org.postgresql.Driver"
                 db_url: "jdbc:postgresql://10.0.0.160:5432/artifactory"
                 db_user: "artifactory"
-                db_password: "Art1fAct0ry"
+                db_password: "{{ lookup('env', 'artifactory_password') }}"
                 server_name: "ec2-100-25-104-198.compute-1.amazonaws.com"
                 certificate: |
                     -----BEGIN CERTIFICATE-----
