--- a/Ansible/examples/host_vars/rt-xray-ha/hosts.yml
+++ b/Ansible/examples/host_vars/rt-xray-ha/hosts.yml
@@ -2,7 +2,7 @@
 all:
     vars:
         ansible_user: "ubuntu"
-        ansible_ssh_private_key_file: "/Users/jefff/.ssh/ansible-priv.pem"
+        ansible_ssh_private_key_file: "{{ lookup('env', 'ansible_key') }}"
     children:
         database:
             hosts:
@@ -11,13 +11,13 @@ all:
                     dbs:
                         - { db_name: "artifactory", db_owner: "artifactory" }
                     db_users:
-                        - { db_user: "artifactory", db_password: "Art1fAct0ry" }
+                        - { db_user: "artifactory", db_password: "{{ lookup('env', 'artifactory_password') }}" }
                 #xray database
                 100.25.152.93:
                     dbs:
                         - { db_name: "xraydb", db_owner: "xray" }
                     db_users:
-                        - { db_user: "xray", db_password: "xray" }
+                        - { db_user: "xray", db_password: "{{ lookup('env', 'xray_password') }}" }
         artifactory:
             vars:
                 artifactory_version: 7.4.1
@@ -29,7 +29,7 @@ all:
                 db_driver: "org.postgresql.Driver"
                 db_url: "jdbc:postgresql://10.0.0.51:5432/artifactory"
                 db_user: "artifactory"
-                db_password: "Art1fAct0ry"
+                db_password: "{{ lookup('env', 'artifactory_password') }}"
                 server_name: "ec2-18-210-33-94.compute-1.amazonaws.com"
             children:
                 primary:
@@ -51,7 +51,7 @@ all:
                 db_driver: "org.postgresql.Driver"
                 db_url: "postgres://10.0.0.5:5432/xraydb?sslmode=disable"
                 db_user: "xray"
-                db_password: "xray"
+                db_password: "{{ lookup('env', 'xray_password') }}"
             hosts:
 #                34.229.56.166:
                 54.237.68.180
