--- a/Ansible/examples/host_vars/rt-xray/hosts.yml
+++ b/Ansible/examples/host_vars/rt-xray/hosts.yml
@@ -2,7 +2,7 @@
 all:
     vars:
         ansible_user: "ubuntu"
-        ansible_ssh_private_key_file: "/Users/jefff/.ssh/ansible-priv.pem"
+        ansible_ssh_private_key_file: "{{ lookup('env', 'ansible_key') }}"
     children:
         database:
             hosts:
@@ -11,8 +11,8 @@ all:
                         - { db_name: "artifactory", db_owner: "artifactory" }
                         - { db_name: "xraydb", db_owner: "xray" }
                     db_users:
-                        - { db_user: "artifactory", db_password: "Art1fAct0ry" }
-                        - { db_user: "xray", db_password: "xray" }
+                        - { db_user: "artifactory", db_password: "{{ lookup('env', 'artifactory_password') }}" }
+                        - { db_user: "xray", db_password: "{{ lookup('env', 'xray_password') }}" }
         artifactory:
             hosts:
                 54.237.207.135:
@@ -29,7 +29,7 @@ all:
                     db_driver: "org.postgresql.Driver"
                     db_url: "jdbc:postgresql://10.0.0.59:5432/artifactory"
                     db_user: "artifactory"
-                    db_password: "Art1fAct0ry"
+                    db_password: "{{ lookup('env', 'artifactory_password') }}"
                     server_name: "ec2-54-237-207-135.compute-1.amazonaws.com"
         xray:
             hosts:
@@ -42,4 +42,4 @@ all:
                     db_driver: "org.postgresql.Driver"
                     db_url: "postgres://10.0.0.59:5432/xraydb?sslmode=disable"
                     db_user: "xray"
-                    db_password: "xray"
+                    db_password: "{{ lookup('env', 'xray_password') }}"
