--- a/Ansible/examples/host_vars/xray/hosts.yml
+++ b/Ansible/examples/host_vars/xray/hosts.yml
@@ -13,6 +13,6 @@ all:
                 db_driver: "org.postgresql.Driver"
                 db_url: "postgres://10.0.0.5:5432/xraydb?sslmode=disable"
                 db_user: "xray"
-                db_password: "xray"
+                db_password: "{{ lookup('env', 'xray_password') }}"
             hosts:
                 3.17.132.222
