--- a/Openshift4/helm/openshift-xray/values.yaml
+++ b/Openshift4/helm/openshift-xray/values.yaml
@@ -2,9 +2,10 @@
 xray:
   unifiedUpgradeAllowed: true
   replicaCount: 1
-  xray:
+  global:
     masterKey: "OVERRIDE"
     joinKey: "OVERRIDE"
+  xray:
     consoleLog: false
     jfrogUrl: "OVERRIDE"
   postgresql:
@@ -17,7 +18,7 @@ xray:
   common:
     xrayUserId: "1000721035"
     xrayGroupId: "1000721035"
-    xrayVersion: "3.10.3-1"
+    xrayVersion: "3.11.2-1"
     customInitContainers: |
       - name: "prepare-uid-persistent-volume"
         image: "{{ .Values.initContainerImage }}"
@@ -71,13 +72,13 @@ xray:
       registry: registry.connect.redhat.com
       repository: jfrog/xray-router
       imagePullPolicy: IfNotPresent
-      tag: 3.10.3-1
+      tag: 3.11.2-1
   rabbitmq-ha:
     enabled: true
     replicaCount: 1
     image:
       repository: registry.connect.redhat.com/jfrog/xray-rabbitmq
-      tag: 3.10.3-1
+      tag: 3.11.2-1
     rabbitmqEpmdPort: 4369
     rabbitmqNodePort: 5672
     rabbitmqManagerPort: 15672
