--- a/Ansible/ansible_collections/jfrog/installers/roles/postgres/vars/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/installers/roles/postgres/vars/RedHat.yml
@@ -1,6 +1,6 @@
 ---
 
-postgres_server_cmd_initdb: /usr/pgsql-{{ postgres_server_version }}/bin/postgresql{{ postgres_server_pkg_version }}-setup initdb -D
+postgres_server_cmd_initdb: /usr/pgsql-{{ postgres_server_version }}/bin/postgresql{{ postgres_server_pkg_version }}-setup initdb
 postgres_server_data_location: /var/lib/pgsql/{{ postgres_server_version }}/data
 postgres_server_config_location: "{{ postgres_server_data_location }}"
 postgres_server_service_name: postgresql-{{ postgres_server_version }}
