--- a/Ansible/ansible_collections/jfrog/installers/roles/xray/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/installers/roles/xray/tasks/RedHat.yml
@@ -9,18 +9,35 @@
   yum:
     name: "{{ xray_home }}/app/third-party/rabbitmq/socat-1.7.3.2-2.el7.x86_64.rpm"
     state: present
+  when: ansible_distribution_version == '7'
+  become: yes
+
+- name: Install socat
+  yum:
+    name: "{{ xray_home }}/app/third-party/rabbitmq/socat-1.7.3.3-2.el8.x86_64.rpm"
+    state: present
+    disable_gpg_check: yes
+  when: ansible_distribution_version == '8'
   become: yes
 
 - name: Install erlang 21.1.4-1
   yum:
-    name: "{{ xray_home }}/app/third-party/rabbitmq/erlang-21.1.4-1.el7.centos.x86_64.rpm"
+    name: "{{ xray_home }}/app/third-party/rabbitmq/erlang-21.1.4-1.el7.x86_64.rpm"
     state: present
-  when: xray_version is version("3.8.0","<")
+  when: xray_version is version("3.8.0","<") and ansible_distribution_version == '7'
   become: yes
 
 - name: Install erlang 22.3.4.1-1
   yum:
-    name: "{{ xray_home }}/app/third-party/rabbitmq/erlang-22.3.4.1-1.el7.centos.x86_64.rpm"
+    name: "{{ xray_home }}/app/third-party/rabbitmq/erlang-22.3.4-1.el7.x86_64.rpm"
     state: present
-  when: xray_version is version("3.8.0",">=")
+  when: xray_version is version("3.8.0",">=") and ansible_distribution_version == '7'
+  become: yes
+
+- name: Install erlang 22.3.4.1-1
+  yum:
+    name: "{{ xray_home }}/app/third-party/rabbitmq/erlang-22.3.4-1.el8.x86_64.rpm"
+    state: present
+    disable_gpg_check: yes
+  when: xray_version is version("3.8.0",">=") and ansible_distribution_version == '8'
   become: yes
