--- a/Openshift4/operator/xray-operator/Dockerfile
+++ b/Openshift4/operator/xray-operator/Dockerfile
@@ -1,7 +1,7 @@
 # Build the manager binary
-FROM quay.io/operator-framework/helm-operator:v1.0.1
+FROM quay.io/operator-framework/helm-operator:v1.3.0
 LABEL name="JFrog Xray Enterprise Operator" \
-      description="Openshift operator to deploy JFrog Xray Enterprise based on the Red Hat Universal Base Image." \
+      description="Openshift operator to deploy JFrog Xray Enterprise based on the Red Hat Universal Base Image" \
       vendor="JFrog" \
       summary="JFrog Xray Enterprise Operator" \
       com.jfrog.license_terms="https://jfrog.com/xray/eula/"
