Updates to Artifactory scc instructions in Operatorhub

--- a/Openshift4/operator/artifactory-ha-operator/bundle/1.1.4/manifests/artifactory-ha-operator.v1.1.4.clusterserviceversion.yaml
+++ b/Openshift4/operator/artifactory-ha-operator/bundle/1.1.4/manifests/artifactory-ha-operator.v1.1.4.clusterserviceversion.yaml
@@ -123,10 +123,15 @@ spec:
 
     ```
 
-    oc adm policy add-scc-to-user anyuid -z artifactory-ha-operator
+    oc adm policy add-scc-to-user anyuid -z artifactory-ha-operator -n openshift-operators
 
     ```
 
+    Using "artifactory" as the example namespace:
+
+    ```
+    oc adm policy add-scc-to-user anyuid -z openshiftartifactoryha-artifactory-ha -n artifactory
+    ```
 
     ## Usage
 
