--- a/Amazon/Marketplace/v7153/templates/jfrog-xray-ec2-instance.template.yaml
+++ b/Amazon/Marketplace/v7153/templates/jfrog-xray-ec2-instance.template.yaml
@@ -182,7 +182,7 @@ Resources:
       IamInstanceProfile: !Ref XrayHostProfile
       ImageId: !FindInMap
         - AWSAMIRegionMap
-        - !Ref 'AWS::Region'
+        - !Ref AWS::Region
         - !Ref XrayAmiId
       SecurityGroups:
         - !Ref SecurityGroups
