--- a/Amazon/artifactory7/v7175/templates/jfrog-artifactory-ec2-master.template.yaml
+++ b/Amazon/artifactory7/v7175/templates/jfrog-artifactory-ec2-master.template.yaml
@@ -517,7 +517,7 @@ Parameters:
     NoEcho: 'true'
     Type: String
 Conditions:
-  UsingDefaultBucket: !Equals [!Ref QsS3BucketName, 'jfrog-aws']
+  UsingDefaultBucket: !Equals [!Ref QsS3BucketName, 'aws-quickstart']
 
 Resources:
   ArtifactoryVpcStack:
