[ansible] JFrog Platform 7.18.5 release

--- a/Ansible/ansible_collections/jfrog/platform/galaxy.yml
+++ b/Ansible/ansible_collections/jfrog/platform/galaxy.yml
@@ -43,7 +43,7 @@ tags:
   - application
   - artifactory
   - distribution
-  - missionControl
+  - missioncontrol
   - xray
 
 # Collections that this collection requires to be installed for it to be usable. The key of the dict is the
