--- a/Ansible/ansible_collections/jfrog/platform/roles/missionControl/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missionControl/tasks/install.yml
@@ -1,6 +1,6 @@
 ---
 - debug:
-    msg: "Performing installation of missionControl version - {{ missionControl_version }}"
+    msg: "Performing installation of missionControl version - {{ missioncontrol_version }}"
 
 - name: Install expect dependency
   become: yes
