--- a/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/upgrade.yml
@@ -5,7 +5,7 @@
 - name: Stop distribution
   become: yes
   systemd:
-    name: {{ distribution_daemon }}
+    name: "{{ distribution_daemon }}"
     state: stopped
 
 - name: Download distribution for upgrade
