--- a/Openshift4/operator/artifactory-ha-operator/helm-charts/openshift-artifactory-ha/Chart.yaml
+++ b/Openshift4/operator/artifactory-ha-operator/helm-charts/openshift-artifactory-ha/Chart.yaml
@@ -1,5 +1,9 @@
-apiVersion: v1
-appVersion: 7.17.5
+apiVersion: v2
+appVersion: 7.18.6
+dependencies:
+  - name: artifactory-ha
+    version: 107.18.6
+    repository: https://charts.jfrog.io/
 description: Openshift JFrog Artifactory HA subcharting Artifactory HA to work in Openshift environment
 home: https://www.jfrog.com/artifactory/
 icon: https://raw.githubusercontent.com/jfrog/charts/master/stable/artifactory-ha/logo/artifactory-logo.png
@@ -16,4 +20,4 @@ name: openshift-artifactory-ha
 sources:
 - https://bintray.com/jfrog/product/JFrog-Artifactory-Pro/view
 - https://github.com/jfrog/charts
-version: 4.13.0
+version: 107.18.6
